--- a/src/app/bar/recharge/recharge.component.html
+++ b/src/app/bar/recharge/recharge.component.html
@@ -4,6 +4,11 @@
 <select name="cameras" id="cameras" *ngIf="cameras!=undefined &&currentDevice!=undefined" (change)="onChange($event)">
     <option *ngFor="let camera of cameras" [value]="camera.deviceId" [selected]="camera.deviceId==currentDevice!.deviceId">{{camera.label}}</option>
 </select>
+<div class="search">
+    <input id="search" type="text" i18n-placeholder placeholder="username" [(ngModel)]="searchQ">
+    <button class="confirm" (click)="search()" i18n>Search</button>
+    <h2 id="message">{{message}}</h2>
+</div>
 <div class="container" *ngIf="scanSuccess">
     <div *ngIf="user!=undefined" class="user">
         <h2 i18n>User:</h2>
@@ -11,8 +16,7 @@
         <h2 i18n>balance:</h2>
         <h3>{{(user!.balance/100).toFixed(2)}}€</h3>
     </div>
-    <h2>Recharge:</h2>
+    <h2 i18n>Recharge:</h2>
     <div class="inp"><input type="number" name="recharge" id="recharge" [(ngModel)]="recharge" (input)="check()"> €</div>
-    <h2>{{message}}</h2>
     <button class="confirm" (click)="confirm()" i18n>Recharge</button>
 </div>
