changed edit overlays height on smaller screens

--- a/src/app/admin/home/account/account-edit-overlay/account-edit-overlay.component.css
+++ b/src/app/admin/home/account/account-edit-overlay/account-edit-overlay.component.css
@@ -161,6 +161,12 @@
     }
 }
 
+@media screen and (max-height:850px) {
+    .container{
+        height: 90%;
+    }
+}
+
 @media (max-width:600px), (max-height:450px)  {
     .container{
         height: 95%;
