--- a/src/app/admin/home/classroom/classroom-edit-overlay/classroom-edit-overlay.component.css
+++ b/src/app/admin/home/classroom/classroom-edit-overlay/classroom-edit-overlay.component.css
@@ -145,6 +145,12 @@
     .editor{
         width: 500px;
     }
+} 
+
+@media screen and (max-height:850px) {
+    .container{
+        height: 90%;
+    }
 }
 
 @media (max-width:600px), (max-height:450px)  {
