--- a/src/app/user/home/quantity-selector-overlay/quantity-selector-overlay.component.css
+++ b/src/app/user/home/quantity-selector-overlay/quantity-selector-overlay.component.css
@@ -67,31 +67,8 @@
     text-align: center;
     color: black;
     padding: 0;
-    border-radius: 20px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    background-color: coral;
-    transition: .1s;
-    box-shadow: 0px 2px 10px gray ;
+    border-radius: 20px !important;
 }
-
-.order:hover{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(243, 121, 76);
-    box-shadow: 0px 0px 10px gray ;
-    transition: .1s;
-}
-
-.order:active{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(235, 94, 43);
-    box-shadow: 0px 0px 0px gray ;
-    transition: .1s;
-}
-
 
 @media screen and (max-width:500px) {
     .container{
