--- a/src/app/user/home/quantity-selector-overlay/quantity-selector-overlay.component.html
+++ b/src/app/user/home/quantity-selector-overlay/quantity-selector-overlay.component.html
@@ -5,6 +5,6 @@
         <h2>{{product.name}}</h2>
         <p class="total" i18n>Total: {{((product!.cost*(clamp(1,quantity,99)))/100).toFixed(2)}}€</p>
         <app-quantity-selector (qChanged)="quantity=$event"></app-quantity-selector>
-        <button class="order" (click)="order()" i18n>Add to Cart</button>
+        <button class="orange-button order" (click)="order()" i18n>Add to Cart</button>
     </div>
 </div>
