--- a/src/app/admin/home/account/account-edit-overlay/account-edit-overlay.component.html
+++ b/src/app/admin/home/account/account-edit-overlay/account-edit-overlay.component.html
@@ -23,9 +23,9 @@
             </select>
             <h3 *ngIf="mode=='add'" i18n>Password:</h3>
             <input *ngIf="mode=='add'" type="text" name="name" id="name" [(ngModel)]="password">
-            <button *ngIf="mode==='edit'" class="confirm" id="delete" (click)="deleteAcc()" i18n>delete</button>
+            <button *ngIf="mode==='edit'" class="orange-button confirm" id="delete" (click)="deleteAcc()" i18n>delete</button>
         </div>
         <h2 *ngIf="message.length>0" class="message">{{message}}</h2>
-        <button *ngIf="account!==undefined" [disabled]="isDisabled()" class="confirm" (click)="update()" i18n>Confirm</button>
+        <button *ngIf="account!==undefined" [disabled]="isDisabled()" class="orange-button confirm" (click)="update()" i18n>Confirm</button>
     </div>
 </div>
