--- a/src/app/admin/home/classroom/classroom-edit-overlay/classroom-edit-overlay.component.css
+++ b/src/app/admin/home/classroom/classroom-edit-overlay/classroom-edit-overlay.component.css
@@ -84,37 +84,7 @@
     text-align: center;
     color: black;
     padding: 0;
-    border-radius: 20px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    background-color: coral;
-    transition: .1s;
-    box-shadow: 0px 2px 10px gray ;
-}
-
-.confirm:hover{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(243, 121, 76);
-    box-shadow: 0px 0px 10px gray ;
-    transition: .1s;
-}
-
-.confirm:active{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(235, 94, 43);
-    box-shadow: 0px 0px 0px gray ;
-    transition: .1s;
-}
-
-.confirm:disabled{
-    background-color: rgb(164, 132, 120);
-    border-color: black;
-    border-width: 0px;
-    box-shadow: 0px 0px 0px gray;
-    transition: .1s;
+    border-radius: 20px !important;
 }
 
 .editor{
