--- a/src/app/admin/home/classroom/classroom.component.css
+++ b/src/app/admin/home/classroom/classroom.component.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     align-items: center;
     height: fit-content;
-    border-style: solid;
     border-radius: 15px;
     margin: 1em auto;
     background-color: whitesmoke;
+    box-shadow: var(--shadow-elevation-medium);
 }
 
 #edit{
