--- a/src/app/admin/orders/order-overlay/order-overlay.component.css
+++ b/src/app/admin/orders/order-overlay/order-overlay.component.css
@@ -7,6 +7,7 @@
     bottom: 0;
     z-index: 100;
     backdrop-filter: blur(5px);
+    transition: 1s;
     box-shadow: inset 0 0 2000px rgba(254, 156, 110, 0.466);
     display: flex;
     justify-content: center;
@@ -115,29 +116,7 @@
     text-align: center;
     color: black;
     padding: 0;
-    border-radius: 20px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    background-color: coral;
-    transition: .1s;
-    box-shadow: 0px 2px 10px gray ;
-}
-
-.ok:hover{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(243, 121, 76);
-    box-shadow: 0px 0px 10px gray ;
-    transition: .1s;
-}
-
-.ok:active{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(235, 94, 43);
-    box-shadow: 0px 0px 0px gray ;
-    transition: .1s;
+    border-radius: 20px !important;
 }
 
 @media (max-width:600px), (max-height:450px)  {
