--- a/src/app/admin/orders/order-overlay/order-overlay.component.html
+++ b/src/app/admin/orders/order-overlay/order-overlay.component.html
@@ -18,6 +18,6 @@
             </div>
         </div>
         <h2 class="total" i18n>Total: {{(order.order.total/100).toFixed(2)}}€</h2>
-        <button class="ok" (click)="close()">OK</button>
+        <button class="orange-button ok" (click)="close()">OK</button>
     </div>
 </div>
