--- a/src/app/admin/orders/orders.component.css
+++ b/src/app/admin/orders/orders.component.css
@@ -19,10 +19,6 @@
     margin-right: 1em;
 }
 
-.page button{
-    width: 90px !important;
-}
-
 .size{
     margin: auto 0;
     margin-left: 1em;
@@ -31,7 +27,9 @@
 .orders{
     background-color: rgb(240, 240, 240);
     border-style: solid;
-    height: var(--height)
+    height: var(--height);
+    box-shadow: var(--shadow-elevation-medium);
+    border-radius: 3px;
 }
 
 .order-item:first-child{
@@ -53,11 +51,6 @@
     text-align: center;
 }
 
-.page button{
-    height: 30px !important;
-    font-size: medium !important;
-}
-
 #prev{
     border-top-right-radius: 0% !important;
     border-bottom-right-radius: 0% !important;
@@ -71,8 +64,18 @@
 #size{
     font-size: large;
 }
+.page button{
+    width: 90px !important;
+    height: 30px !important;
+    font-size: medium !important;
+    text-align: center;
+    color: black;
+    margin: auto 0;
+    padding: 0;
+    border-radius: 20px !important;
+}
 
-.order-item button , .page button{
+.order-item button{
     text-align: center;
     color: black;
     height: 30px;
@@ -81,37 +84,7 @@
     font-size: large;
     margin:auto 0;
     padding: 0;
-    border-radius: 20px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    background-color: coral;
-    transition: .1s;
-    box-shadow: 0px 2px 10px gray ;
-}
-
-.order-item button:hover, .page button:hover{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(243, 121, 76);
-    box-shadow: 0px 0px 10px gray ;
-    transition: .1s;
-}
-
-.order-item button:active, .page button:active{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(235, 94, 43);
-    box-shadow: 0px 0px 0px gray ;
-    transition: .1s;
-}
-
-.order-item button:disabled, .page button:disabled{
-    background-color: rgb(164, 132, 120);
-    border-color: black;
-    border-width: 0px;
-    box-shadow: 0px 0px 0px gray;
-    transition: .1s;
+    border-radius: 20px !important;
 }
 
 @media screen and (max-width:500px) {
