--- a/src/app/bar/header/bar-header.component.css
+++ b/src/app/bar/header/bar-header.component.css
@@ -1,12 +1,41 @@
+::ng-deep :root{
+    --shadow-color: 172deg 57% 59%;
+    --shadow-elevation-low:
+    0.4px 0.6px 0.7px hsl(var(--shadow-color) / 0.67),
+    1.6px 2.2px 2.7px -3.4px hsl(var(--shadow-color) / 0.49);
+    --shadow-elevation-medium:
+    0.4px 0.6px 0.7px hsl(var(--shadow-color) / 0.62),
+    1.8px 2.5px 3px -1.7px hsl(var(--shadow-color) / 0.51),
+    7.9px 11.2px 13.6px -3.4px hsl(var(--shadow-color) / 0.4);
+    --shadow-elevation-high:
+    0.4px 0.6px 0.7px hsl(var(--shadow-color) / 0.56),
+    2.3px 3.2px 3.9px -0.8px hsl(var(--shadow-color) / 0.5),
+    6.1px 8.7px 10.5px -1.7px hsl(var(--shadow-color) / 0.44),
+    14.9px 21px 25.5px -2.6px hsl(var(--shadow-color) / 0.38),
+    31.4px 44.4px 53.8px -3.4px hsl(var(--shadow-color) / 0.32);
+
+    --header-shadow:
+    0px 0.5px 0.6px hsl(var(--shadow-color) / 0.35),
+    0px 2.2px 2.5px -1.2px hsl(var(--shadow-color) / 0.35),
+    0.1px 8.5px 9.6px -2.5px hsl(var(--shadow-color) / 0.35);
+}
+
+::ng-deep body{
+    background-color: hsl(172, 100%, 78%);
+}
+
 .container{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(111, 239, 209);
+    background-color: hsl(151, 100%, 69%);
     height: 5rem;
     min-width: fit-content;
     width: auto;
     max-width: 100vw;
+    border-bottom-right-radius: 15px 3px;
+    border-bottom-left-radius: 15px 3px;
+    box-shadow: var(--header-shadow);
 }
 h1{
     margin: 0 3vw;
