--- a/src/app/bar/home/complete-overlay/complete-overlay.component.html
+++ b/src/app/bar/home/complete-overlay/complete-overlay.component.html
@@ -15,6 +15,6 @@
             </div>
         </div>
         <h2 class="message">{{message}}</h2>
-        <button i18n [disabled]="buttonDisabled" class="order" (click)="complete()" i18n>Complete</button>
+        <button i18n [disabled]="buttonDisabled" class="orange-button order" (click)="complete()" i18n>Complete</button>
     </div>
 </div>
