--- a/src/app/bar/products/product/product.component.css
+++ b/src/app/bar/products/product/product.component.css
@@ -1,19 +1,20 @@
 .container{
-    margin: 1em 0;
+    margin: 0 0 1em 0 !important;
     padding:10px;
     height: 200px;
     display: flex;
     align-items: center;
-    height: 200px;
-    margin: 1rem 0;
     border-radius: 20px;
     border-style: var(--enabled);
     border-color: black;
+    background-color: white;
+    box-shadow: var(--shadow-elevation-medium);
 }
 
 .container > img{
     height: 80%;
 }
+
 #edit{
     appearance: none;
     border: none;
