--- a/src/app/bar/products/products.component.css
+++ b/src/app/bar/products/products.component.css
@@ -7,7 +7,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 1em 0;
+    margin:1em 0 0 0;
+    overflow-y: hidden;
 }
 
 input[type=radio]{
@@ -25,44 +26,9 @@ input[type=radio]:checked + label{
 }
 
 .menu button{
-    margin: auto 0;
+    margin: auto 0 1em 0 ;
     height: 40px;
     width: 200px;
     font-size: large;
     color: black;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    border-radius: 10px;
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    background-color: coral;
-    transition: .1s;
-    box-shadow: 0px 2px 10px gray;
-    cursor: pointer;
-}
-
-.menu button:hover{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(243, 121, 76);
-    box-shadow: 0px 0px 10px gray ;
-    transition: .1s;
-}
-
-.menu button:active{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(235, 94, 43);
-    box-shadow: 0px 0px 0px gray ;
-    transition: .1s;
-}
-
-.menu button:disabled{
-    background-color: rgb(164, 132, 120);
-    border-color: black;
-    border-width: 0px;
-    box-shadow: 0px 0px 0px gray;
-    transition: .1s;
 }
