--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -10,11 +10,11 @@
     width: 20rem;
     border-color: var(--border-color);
     border-style: solid;
-    border-radius: 5px;
+    border-radius: 10px;
     border-width: 1px;
     padding: clamp(1em,3%,3em);
     background-color: var(--bg-color);
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--shadow-elevation-medium);
 }
 
 .login-message{
@@ -48,30 +48,24 @@
     border-width: 1px;
     background-color: coral;
     transition: .1s;
-    box-shadow: 0px 2px 10px gray ;
+    box-shadow: var(--shadow-elevation-high);
 }
 
 .login-options button:hover{
-    border-color: gray;
-    border-width: 2px;
     background-color: rgb(243, 121, 76);
-    box-shadow: 0px 0px 10px gray ;
+    box-shadow: var(--shadow-elevation-medium);
     transition: .1s;
 }
 
 .login-options button:active{
-    border-color: gray;
-    border-width: 2px;
     background-color: rgb(235, 94, 43);
-    box-shadow: 0px 0px 0px gray ;
+    box-shadow: var(--shadow-elevation-low);
     transition: .1s;
 }
 
 .login-options button:disabled{
     background-color: rgb(164, 132, 120);
-    border-color: black;
-    border-width: 0px;
-    box-shadow: 0px 0px 0px gray;
+    box-shadow: none;
     transition: .1s;
 }
 
