--- a/src/app/user/product/product.component.html
+++ b/src/app/user/product/product.component.html
@@ -5,7 +5,7 @@
         <h2>{{product.name}}</h2>
         <div class="buy">
             <p>{{(product.cost*quantity/100).toFixed(2)}}€</p>
-            <button *ngIf="router.url==='/home'" (click)="onClick()" i18n>Add to Cart</button>
+            <button class="orange-button" *ngIf="router.url==='/home'" (click)="onClick()" i18n>Add to Cart</button>
             <app-quantity-selector *ngIf="router.url==='/cart'" [quantity]="quantity" (qChanged)="onChangeQ($event)"></app-quantity-selector>
         </div>
     </div>
