forgot to add this

--- a/src/app/components/account/user-order-list/account-order-overlay/account-order-overlay.component.html
+++ b/src/app/components/account/user-order-list/account-order-overlay/account-order-overlay.component.html
@@ -15,6 +15,6 @@
             </div>
         </div>
         <h2 class="total"  i18n>Total: {{(order.total/100).toFixed(2)}}€</h2>
-        <button class="ok" (click)="close()">OK</button>
+        <button class="orange-button ok" (click)="close()">OK</button>
     </div>
 </div>
