--- a/src/app/components/account/user-order-list/user-order-list.component.css
+++ b/src/app/components/account/user-order-list/user-order-list.component.css
@@ -1,6 +1,7 @@
 .selector{
     display: flex;
     flex-direction: row;
+    margin-bottom: 1em;
 }
 
 .container{
@@ -76,35 +77,5 @@
     font-size: large;
     margin:auto 0;
     padding: 0;
-    border-radius: 20px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    background-color: coral;
-    transition: .1s;
-    box-shadow: 0px 2px 10px gray ;
-}
-
-.order-item button:hover, .page button:hover{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(243, 121, 76);
-    box-shadow: 0px 0px 10px gray ;
-    transition: .1s;
-}
-
-.order-item button:active, .page button:active{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(235, 94, 43);
-    box-shadow: 0px 0px 0px gray ;
-    transition: .1s;
-}
-
-.page button:disabled{
-    background-color: rgb(164, 132, 120);
-    border-color: black;
-    border-width: 0px;
-    box-shadow: 0px 0px 0px gray;
-    transition: .1s;
+    border-radius: 20px !important;
 }
