--- a/src/app/admin/orders/orders.component.css
+++ b/src/app/admin/orders/orders.component.css
@@ -3,12 +3,15 @@
     min-height: 800px;
     width: 90%;
     margin: 1em auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .selector{
     display: flex;
     flex-direction: row;
-    margin-bottom: 1em;
+    padding-bottom: 1em;
+    overflow: hidden;
 }
 
 
