--- a/src/app/bar/util/img-selector/img-selector.component.html
+++ b/src/app/bar/util/img-selector/img-selector.component.html
@@ -24,6 +24,6 @@
             </div>
         </div>
         <h2 *ngIf="message.length>0" class="message">{{message}}</h2>
-        <button [disabled]="isDisabled()" class="confirm" (click)="select()" i18n>Select</button>
+        <button [disabled]="isDisabled()" class="orange-button confirm" (click)="select()" i18n>Select</button>
     </div>
 </div>
