--- a/src/app/user/home/home.component.css
+++ b/src/app/user/home/home.component.css
@@ -79,6 +79,7 @@
     font-size: larger;
     transition: .2s;
     box-shadow: var(--shadow-elevation-high);
+    cursor: pointer;
 }
 
 .row #PANINO + label{
