--- a/src/app/bar/util/img-selector/img-selector.component.css
+++ b/src/app/bar/util/img-selector/img-selector.component.css
@@ -110,6 +110,11 @@
     margin: 0;
     border: 2px solid black;
 }
+
+.images .imgContainer label{
+    cursor: pointer;
+}
+
 .images .select{
     appearance: none;
     margin:0px;
@@ -119,6 +124,7 @@
     right: 3px;
     height: 20%;
     width: 20%;
+    cursor: pointer;
 }
 
 .images .select:checked{
@@ -143,6 +149,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .newImage img{
@@ -172,37 +179,7 @@
     text-align: center;
     color: black;
     padding: 0;
-    border-radius: 20px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    background-color: coral;
-    transition: .1s;
-    box-shadow: 0px 2px 10px gray ;
-}
-
-.confirm:hover{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(243, 121, 76);
-    box-shadow: 0px 0px 10px gray ;
-    transition: .1s;
-}
-
-.confirm:active{
-    border-color: gray;
-    border-width: 2px;
-    background-color: rgb(235, 94, 43);
-    box-shadow: 0px 0px 0px gray ;
-    transition: .1s;
-}
-
-.confirm:disabled{
-    background-color: rgb(164, 132, 120);
-    border-color: black;
-    border-width: 0px;
-    box-shadow: 0px 0px 0px gray;
-    transition: .1s;
+    border-radius: 20px !important;
 }
 
 @media (max-width:600px), (max-height:450px)  {
