--- a/src/app/components/account/user-order-list/user-order-list.component.css
+++ b/src/app/components/account/user-order-list/user-order-list.component.css
@@ -1,7 +1,8 @@
 .selector{
     display: flex;
     flex-direction: row;
-    margin-bottom: 1em;
+    padding-bottom: 1em;
+    overflow-y: hidden;
 }
 
 .container{
